<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPantaInicial"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
      
        android:text="@string/titulo"
        android:textColor="@color/naranja"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
    
        android:text="@string/subtitulo"
        android:textColor="@color/naranja"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/gridOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:columnWidth="60dp"
        android:gravity="center_vertical|center_horizontal"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp" >
    </GridView>

    <TextView
        android:id="@+id/tvInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/instrucciones"
        android:textColor="@color/naranja"
        android:textSize="18sp"
        android:textStyle="bold" 
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/autor"
        android:textColor="@color/naranja"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>