<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPantallaResultado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvGanaPierde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/naranja"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvSolucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/naranja"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imgGanaPierde"
         android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/frutas" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="135dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BtJugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:text="@string/jugar"
            android:textColor="@color/naranja"
            android:textSize="28sp" />

        <Button
            android:id="@+id/BtSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:text="@string/salir"
            android:textColor="@color/naranja"
            android:textSize="28sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/autor"
        android:textColor="@color/naranja"
        android:textStyle="bold"
        android:textSize="16sp" />

</LinearLayout>